             to unfold a polyhedron net, new option -x V deletes
             free vertices
           minmax: new ellipsoid and superellipsoid surfaces, default
             algorithm is v
           Resources: new colour map files and generatable maps,
             uniform and Johnson model files removed and are now
             internal unit-edged and coloured, new uniform
             compounds (by Roger Kaufman)
           All: --help and --version options. New shift, step,
             and wrap modifiers for reindexing colour maps
           
         Fixes
           lat_grid: origin is the default centre for -c s

Version 0.19.1
02-12-08 Adrian Rossiter <adrian@antiprism.com>
         Fixes
           build: will build with GCC 4.3
           off_color: -e p outputs colour index numbers

Version 0.19
28-11-08 Adrian Rossiter <adrian@antiprism.com>
         New Programs
           bravais: generates Bravais lattices, and their reciprocal
             lattices and Dirchlet regions (by Roger Kaufman)
           waterman: generates Waterman polyhedra (by Roger Kaufman)
         Changes
           all: new colour name 'invisible' for hiding elements
           off_trans: all options are applied in the order they are
             given. -s Ee uses explicit edges if any are present,
             otherwise uses implicit edges. New option -S r to scale
             a polyhedron into a unit sphere. New transformation -a
             that makes particular angles between the mapped axes.
             New transformation -A that aligns two pairs of vectors
             or two sets of three points.
           lat_grid: HCP added
           packer: program removed
           off2eig: moved to extra programs
         Fixes
           geodesic: polyhedra with square faces no longer
             have invalid coordinates for some vertices.
           off_trans: -s prints an error message if there are no
             elements of the appropriate type. 