@@ -131,6 +131,8 @@ const char *get_help(const char* name)
    help["prism"] = help_polygon;
    help["antiprism"] = help_polygon;
    help["uc"] = help_uniform_compounds;
+   help["geo"] = help_geodesic;
+   help["geodesic"] = help_geodesic;
    help["col_val"] = help_color_val;
    help["col_names"] = help_color_names;
    help["col_map"] = help_color_map;
